--- a/contact.html
+++ b/contact.html
@@ -271,18 +271,18 @@
               <!-- You can delete the links only if you purchased the pro version. -->
               <!-- Licensing information: https://bootstrapmade.com/license/ -->
               <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="#">BootstrapMade</a>
             </div>
 
           </div>
 
           <div class="col-md-6">
             <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="twitter"><i class="bi bi-twitter"></i></a>
+              
+              
+              <a href="#" class="google-plus"><i class="bi bi-telegram"></i></a>
+              <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="twitter"><i class="bi bi-linkedin"></i></a>
             </div>
 
           </div>
