--- a/single-post.html
+++ b/single-post.html
@@ -133,7 +133,7 @@
             </div><!-- End Single Post Content -->
 
             <!-- ======= Comments ======= -->
-            <div class="comments">
+            <!-- <div class="comments">
               <h5 class="comment-title py-4">2 Comments</h5>
               <div class="comment d-flex mb-4">
                 <div class="flex-shrink-0">
@@ -204,10 +204,11 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End Comments -->
+            </div> -->
+            <!-- End Comments -->
 
             <!-- ======= Comments Form ======= -->
-            <div class="row justify-content-center mt-5">
+            <!-- <div class="row justify-content-center mt-5">
 
               <div class="col-lg-12">
                 <h5 class="comment-title">Leave a Comment</h5>
@@ -230,7 +231,8 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End Comments Form -->
+            </div> -->
+            <!-- End Comments Form -->
 
           </div>
           <div class="col-md-3">
@@ -518,18 +520,18 @@
               <!-- You can delete the links only if you purchased the pro version. -->
               <!-- Licensing information: https://bootstrapmade.com/license/ -->
               <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="#">BootstrapMade</a>
             </div>
 
           </div>
 
           <div class="col-md-6">
             <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="twitter"><i class="bi bi-twitter"></i></a>
+              
+              
+              <a href="#" class="google-plus"><i class="bi bi-telegram"></i></a>
+              <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="twitter"><i class="bi bi-linkedin"></i></a>
             </div>
 
           </div>
