--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a href="" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Stephen Hodgkiss Blog</h1>
+        <h1>Stephen Hodgkiss</h1>
       </a>
 
       <nav id="navbar" class="navbar">
