--- a/search-result.html
+++ b/search-result.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Stephen Hodgkiss Bootstrap Template - Search Results</title>
+  <title>Stephen Hodgkiss - Search Results</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
