--- a/single-post.html
+++ b/single-post.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Stephen Hodgkiss Bootstrap Template - Single Post</title>
+  <title>Stephen Hodgkiss - Single Post</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
