--- a/search-result.html
+++ b/search-result.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/shoeprints.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -51,8 +51,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="">Blog</a></li>
-          <li><a href="single-post.html">Single Post</a></li>
+           <!--<li><a href="">Blog</a></li>-->
+          <li><a href="single-post.html">Blog</a></li>
           <li class="dropdown"><a href="category.html"><span>Categories</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="search-result.html">Search Result</a></li>
@@ -73,14 +73,15 @@
           </li>
 
           <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+           <!--<li><a href="contact.html">Contact</a></li>-->
         </ul>
       </nav><!-- .navbar -->
 
       <div class="position-relative">
-        <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
-        <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
-        <a href="#" class="mx-2"><span class="bi-instagram"></span></a>
+        
+        <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="mx-2"><span class="bi bi-twitter"></span></a>
+        <a href="https://t.me/stevehodgkiss" class="mx-2"><span class="bi bi-telegram"></span></a>
+        <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="mx-2"><span class="bi bi-linkedin"></span></a>
 
         <a href="#" class="mx-2 js-search-open"><span class="bi-search"></span></a>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -411,7 +412,7 @@
               <li><a href=""><i class="bi bi-chevron-right"></i> Home</a></li>
               <li><a href=""><i class="bi bi-chevron-right"></i> Blog</a></li>
               <li><a href="category.html"><i class="bi bi-chevron-right"></i> Categories</a></li>
-              <li><a href="single-post.html"><i class="bi bi-chevron-right"></i> Single Post</a></li>
+              <li><a href="single-post.html"><i class="bi bi-chevron-right"></i> Blog</a></li>
               <li><a href="about.html"><i class="bi bi-chevron-right"></i> About us</a></li>
               <li><a href="contact.html"><i class="bi bi-chevron-right"></i> Contact</a></li>
             </ul>
