--- a/about.html
+++ b/about.html
@@ -332,7 +332,7 @@
               <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="twitter"><i class="bi bi-twitter"></i></a>
               
               
-              <a href="https://t.me/stevehodgkiss" class="google-plus"><i class="bi bi-telegram"></i></a>
+              <a href="https://t.me/stevehodgkiss" class="twitter"><i class="bi bi-telegram"></i></a>
               <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="twitter"><i class="bi bi-linkedin"></i></a>
             </div>
 
