--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
           <div class="col-md-6">
             <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
               <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="https://t.me/stevehodgkiss" class="google-plus"><i class="bi bi-telegram"></i></a>
+              <a href="https://t.me/stevehodgkiss" class="twitter"><i class="bi bi-telegram"></i></a>
               <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="twitter"><i class="bi bi-linkedin"></i></a>
             </div>
 
