--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="position-relative">
         
-        <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="mx-2"><span class="bi bi-twitter"></span></a>
+        <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="mx-2"><span class="bi bi-pinterest"></span></a>
         <a href="https://t.me/stevehodgkiss" class="mx-2"><span class="bi bi-telegram"></span></a>
         <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="mx-2"><span class="bi bi-linkedin"></span></a>
 
@@ -700,9 +700,9 @@
 
           <div class="col-md-6">
             <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
-              <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="https://t.me/stevehodgkiss" class="twitter"><i class="bi bi-telegram"></i></a>
-              <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="twitter"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="mx-2"><i class="bi bi-pinterest"></i></a>
+              <a href="https://t.me/stevehodgkiss" class="mx-2"><i class="bi bi-telegram"></i></a>
+              <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="mx-2"><i class="bi bi-linkedin"></i></a>
             </div>
 
           </div>
