--- a/index.html
+++ b/index.html
@@ -702,6 +702,7 @@
             <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
               <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="mx-2"><i class="bi bi-pinterest"></i></a>
               <a href="https://t.me/stevehodgkiss" class="mx-2"><i class="bi bi-telegram"></i></a>
+              <a href="https://twitter.com/stevehodgkiss8" class="mx-2"><i class="bi bi-twitter"></i></a>
               <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="mx-2"><i class="bi bi-linkedin"></i></a>
             </div>
 
