--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         
         <a href="https://www.pinterest.co.uk/stephen_hodgkiss/" class="mx-2"><span class="bi bi-pinterest"></span></a>
         <a href="https://t.me/stevehodgkiss" class="mx-2"><span class="bi bi-telegram"></span></a>
+        <a href="https://twitter.com/stevehodgkiss8" class="mx-2"><span class="bi bi-twitter"></span></a>
         <a href="https://www.linkedin.com/in/stephenhodgkiss/" class="mx-2"><span class="bi bi-linkedin"></span></a>
 
         <a href="#" class="mx-2 js-search-open"><span class="bi-search"></span></a>
