--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="swiper sliderFeaturedPosts">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('assets/img/post-slide-1.jpg');">
+                  <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('assets/img/shubham-dhage-_rZnChsIFuQ-unsplash-min.jpg');">
                     <div class="img-bg-inner">
                       <h2>Unlock the Future with Blockchain Technology</h2>
                       <p>By harnessing the power of blockchain, businesses can enable secure, transparent, and efficient transactions that are highly resistant to fraud or manipulation. Additionally, blockchain technology can be used to create and manage digital assets, such as cryptocurrencies, and smart contracts that enable trustless, automated agreements between two or more parties.</p>
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('assets/img/post-slide-2.jpg');">
+                  <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('assets/img/florian-olivo-4hbJ-eymZ1o-unsplash-min.jpg');">
                     <div class="img-bg-inner">
                       <h2>Harness the Power of Blockchain</h2>
                       <p>Blockchain is a revolutionary technology that has the potential to completely transform the way we do business, store and exchange data, and interact with one another. It is a decentralized, immutable digital ledger that can securely store data and transactions.</p>
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('assets/img/post-slide-3.jpg');">
+                  <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('assets/img/shubham-dhage-_rZnChsIFuQ-unsplash-min.jpg');">
                     <div class="img-bg-inner">
                       <h2>The Future of Blockchain Transactions is Here</h2>
                       <p>Blockchain technology is becoming increasingly integrated into our everyday lives, with more applications being developed and adopted every day. From finance to logistics, blockchain-based transactions are making it easier and more secure to conduct business. </p>
@@ -140,7 +140,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('assets/img/post-slide-4.jpg');">
+                  <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('assets/img/tim-van-der-kuip-CPs2X8JYmS8-unsplash-min.jpg');">
                     <div class="img-bg-inner">
                       <h2>Get Ahead of the Curve with Blockchain</h2>
                       <p>Blockchain technology is the future of many industries and businesses, and it’s important to get ahead of the curve to ensure your business is prepared and ready to capitalize on the opportunities blockchain presents.</p>
