--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Stephen Hodgkiss - Contact</title>
+  <title>All About Blockchain - Contact</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
