--- a/search-result.html
+++ b/search-result.html
@@ -1,46 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>All About Blockchain - Search Results</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+<title>"singe post"</title>
+<meta property="og:title" content="singe post">
+<meta content="single post" property="og:description">
+<meta content="Stephen,Hodgkiss,Blockchain,Developer" property="og:keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/shoeprints.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<!-- Favicons -->
+<link href="assets/img/shoeprints.png" rel="icon">
+<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<!-- Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!--<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">-->
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+<!-- Vendor CSS Files -->
+<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<!--<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+<link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <!-- Template Main CSS Files -->
-  <link href="assets/css/variables.css" rel="stylesheet">
-  <link href="assets/css/main.css" rel="stylesheet">
+<!-- Template Main CSS Files -->
+<link href="assets/css/variables.css" rel="stylesheet">
+<link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: ZenBlog - v1.3.0
-  * Template URL: https://bootstrapmade.com/zenblog-bootstrap-blog-template/
-  * Author: BootstrapMade.com
-  * License: https:///bootstrapmade.com/license/
-  ======================================================== -->
+<!-- =======================================================
+* Template Name: ZenBlog - v1.3.0
+* Template URL: https://bootstrapmade.com/zenblog-bootstrap-blog-template/
+* Author: BootstrapMade.com
+* License: https:///bootstrapmade.com/license/
+======================================================== -->
 </head>
-
 <body>
-
-  <!-- ======= Header ======= -->
+      <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
@@ -102,10 +100,8 @@
     </div>
 
   </header><!-- End Header -->
-
-  <main id="main">
-
-    <!-- ======= Search Results ======= -->
+    <main id="main">
+            <!-- ======= Search Results ======= -->
     <section id="search-result" class="search-result">
       <div class="container">
         <div class="row">
@@ -393,10 +389,8 @@
         </div>
       </div>
     </section> <!-- End Search Result -->
-
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
+    </main>
+      <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
 
     <div class="footer-content">
@@ -404,8 +398,10 @@
 
         <div class="row g-5">
           <div class="col-lg-4">
-            <h3 class="footer-heading">About Stephen Hodgkiss</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ab, perspiciatis beatae autem deleniti voluptate nulla a dolores, exercitationem eveniet libero laudantium recusandae officiis qui aliquid blanditiis omnis quae. Explicabo?</p>
+            <h3 class="footer-heading">About Stephen Hodgkis</h3>
+            <p>I'm Stephen Hodgkiss. I'm a web developer living in-between the United Kingdom and S.E. Asia. I am a fan of technology, travel and food. I'm also interested in programming and web development. You can read my articles with a click on the button above.</p>
+            <p>Born in the UK, after finishing school I graduated from Technical College with a HND (Higher National Diploma). After working my way up as an Employee of various companies, I went Freelance in 1987. Working both in the UK and locations worldwide, I soon built up my reputation as a very competent developer, being retained by one particular Bank for 15 years.</p>
+            <p>The last few years I've developed more experience that relates to Blockchain Technology and the way it can empower governments, businesses and customers. This includes the development of blockchain platforms and Cryptocurrency exchanges.</p>
             <p><a href="about.html" class="footer-link-more">Learn More</a></p>
           </div>
           <div class="col-6 col-lg-2">
@@ -463,7 +459,7 @@
                   <img src="assets/img/post-sq-3.jpg" alt="" class="img-fluid me-3">
                   <div>
                     <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <span>Life Insurance And Pregnancy: A Working Mom’s Guide</span>
+                    <span>Life Insurance And Pregnancy: A Working Mom's Guide</span>
                   </div>
                 </a>
               </li>
@@ -520,19 +516,5 @@
     </div>
 
   </footer>
-
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
