--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <main id="main">
         <!-- ======= Hero Slider Section ======= -->
 <section id="hero-slider" class="hero-slider">
-  <div class="container-md" data-aos="">
+  <div class="container-md" data-aos="fade-in">
     <div class="row">
       <div class="col-12">
         <div class="swiper sliderFeaturedPosts">
