--- a/single-post.html
+++ b/single-post.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-<title>"singe post"</title>
-<meta property="og:title" content="singe post">
-<meta content="single post" property="og:description">
+<title>"All About Blockchain - single post"</title>
+<meta property="og:title" content="All About Blockchain - single post">
+<meta content="Born in the UK, after finishing school Stephen Hodgkiss graduated from Technical College with a HND (Higher National Diploma). After working his way up as an Employee of various companies, he went Freelance in 1987. Working both in the UK and locations worldwide, Stephen Hodgkiss soon built up his reputation as a very competent developer, being retained by one particular Bank for 15 years. The last few years Stephen Hodgkiss developed more experience that relates to Blockchain Technology and the way it can empower governments, businesses and customers. This includes the development of blockchain platforms and Cryptocurrency exchanges." property="og:description">
 <meta content="Stephen,Hodgkiss,Blockchain,Developer" property="og:keywords">
 
 <!-- Favicons -->
