--- a/category.html
+++ b/category.html
@@ -105,7 +105,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-md-9" data-aos="">
+          <div class="col-md-9" data-aos="fade-in">
             <h3 class="category-title">Category: Business</h3>
 
             <div class="d-md-flex post-entry-2 half">
