--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 <!-- ======= Post Grid Section ======= -->
 <section id="posts" class="posts">
-  <div class="container" data-xxx="fade-up">
+  <div class="container" data-aos="fade-up">
     <div class="row g-5">
       <div class="col-lg-4">
         <div class="post-entry-1 lg">
@@ -270,7 +270,7 @@
 
 <!-- ======= Culture Category Section ======= -->
 <section class="category-section">
-  <div class="container" data-xxx="fade-up">
+  <div class="container" data-aos="fade-up">
 
     <div class="section-header d-flex justify-content-between align-items-center mb-5">
       <h2>Culture</h2>
@@ -368,7 +368,7 @@
 
 <!-- ======= Business Category Section ======= -->
 <section class="category-section">
-  <div class="container" data-xxx="fade-up">
+  <div class="container" data-aos="fade-up">
 
     <div class="section-header d-flex justify-content-between align-items-center mb-5">
       <h2>Business</h2>
@@ -465,7 +465,7 @@
 
 <!-- ======= Lifestyle Category Section ======= -->
 <section class="category-section">
-  <div class="container" data-xxx="fade-up">
+  <div class="container" data-aos="fade-up">
 
     <div class="section-header d-flex justify-content-between align-items-center mb-5">
       <h2>Lifestyle</h2>
