--- a/single-post.html
+++ b/single-post.html
@@ -104,7 +104,7 @@
         <section class="single-post-content">
   <div class="container">
     <div class="row">
-      <div class="col-md-9 post-content" data-aos="">
+      <div class="col-md-9 post-content" data-aos="fade-in">
 
         <!-- ======= Blog Content ======= -->
         <div class="single-post">
