--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
   </header><!-- End Header -->
     <main id="main">
             <section>
-      <div class="container" data-aos="">
+      <div class="container" data-aos="fade-in">
         <div class="row">
           <div class="col-lg-12 text-center mb-5">
             <h1 class="page-title">About us</h1>
