--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
   </header><!-- End Header -->
     <main id="main">
-        <!-- ======= Hero Slider Section ======= -->
+        
+<!-- ======= Hero Slider Section ======= -->
 <section id="hero-slider" class="hero-slider">
   <div class="container-md" data-aos="fade-in">
     <div class="row">
@@ -156,10 +157,12 @@
       </div>
     </div>
   </div>
-</section><!-- End Hero Slider Section -->
-
+</section>
+<!-- End Hero Slider Section -->
+<h1 class="text-center" style="padding:20px">Coming Soon - Apologies this is a new site and not complete yet.</h1>
+<h1 class="text-center" style="padding:20px">With Christmas and the New Year, I am still managing to get some work done.</h1> 
 <!-- ======= Post Grid Section ======= -->
-<section id="posts" class="posts">
+<!-- <section id="posts" class="posts">
   <div class="container" data-aos="fade-up">
     <div class="row g-5">
       <div class="col-lg-4">
@@ -216,7 +219,6 @@
             </div>
           </div>
 
-          <!-- Trending Section -->
           <div class="col-lg-4">
 
             <div class="trending">
@@ -260,16 +262,17 @@
               </ul>
             </div>
 
-          </div> <!-- End Trending Section -->
+          </div>
         </div>
       </div>
 
-    </div> <!-- End .row -->
+    </div>
   </div>
-</section> <!-- End Post Grid Section -->
+</section> -->
+<!-- End Post Grid Section -->
 
 <!-- ======= Culture Category Section ======= -->
-<section class="category-section">
+<!-- <section class="category-section">
   <div class="container" data-aos="fade-up">
 
     <div class="section-header d-flex justify-content-between align-items-center mb-5">
@@ -364,10 +367,11 @@
       </div>
     </div>
   </div>
-</section><!-- End Culture Category Section -->
+</section> -->
+<!-- End Culture Category Section -->
 
 <!-- ======= Business Category Section ======= -->
-<section class="category-section">
+<!-- <section class="category-section">
   <div class="container" data-aos="fade-up">
 
     <div class="section-header d-flex justify-content-between align-items-center mb-5">
@@ -461,10 +465,11 @@
       </div>
     </div>
   </div>
-</section><!-- End Business Category Section -->
+</section> -->
+<!-- End Business Category Section -->
 
 <!-- ======= Lifestyle Category Section ======= -->
-<section class="category-section">
+<!-- <section class="category-section">
   <div class="container" data-aos="fade-up">
 
     <div class="section-header d-flex justify-content-between align-items-center mb-5">
@@ -580,9 +585,10 @@
         </div>
       </div>
 
-    </div> <!-- End .row -->
+    </div>
   </div>
-</section><!-- End Lifestyle Category Section -->
+</section> -->
+<!-- End Lifestyle Category Section -->
     </main>
       <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
