--- a/category.html
+++ b/category.html
@@ -37,7 +37,7 @@
 * License: https:///bootstrapmade.com/license/
 ======================================================== -->
 </head>
-<body>
+<body style="font-size:18px">
       <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -51,7 +51,7 @@
       <nav id="navbar" class="navbar">
         <ul>
            <!--<li><a href="">Blog</a></li>-->
-          <li><a href="single-post.html">Blog</a></li>
+          <li><a href="blog.html">Blog</a></li>
           <li class="dropdown"><a href="category.html"><span>Categories</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <!--<li><a href="search-result.html">Search Result</a></li>-->
