--- a/about.html
+++ b/about.html
@@ -236,7 +236,7 @@
               <li><a href=""><i class="bi bi-chevron-right"></i> Home</a></li>
               <li><a href=""><i class="bi bi-chevron-right"></i> Blog</a></li>
               <li><a href="category.html"><i class="bi bi-chevron-right"></i> Categories</a></li>
-              <li><a href="single-post.html"><i class="bi bi-chevron-right"></i> Blog</a></li>
+              <li><a href="blog.html"><i class="bi bi-chevron-right"></i> Blog</a></li>
               <li><a href="about.html"><i class="bi bi-chevron-right"></i> About us</a></li>
               <li><a href="contact.html"><i class="bi bi-chevron-right"></i> Contact</a></li>
             </ul>
@@ -261,40 +261,40 @@
 
             <ul class="footer-links footer-blog-entry list-unstyled">
               <li>
-                <a href="single-post.html" class="d-flex align-items-center">
+                <a href="blog.html" class="d-flex align-items-center">
                   <img src="assets/img/post-sq-1.jpg" alt="" class="img-fluid me-3">
                   <div>
-                    <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
+                    <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Dec 5th '22</span></div>
                     <span>5 Great Startup Tips for Female Founders</span>
                   </div>
                 </a>
               </li>
 
               <li>
-                <a href="single-post.html" class="d-flex align-items-center">
+                <a href="blog.html" class="d-flex align-items-center">
                   <img src="assets/img/post-sq-2.jpg" alt="" class="img-fluid me-3">
                   <div>
-                    <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
+                    <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Dec 5th '22</span></div>
                     <span>What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</span>
                   </div>
                 </a>
               </li>
 
               <li>
-                <a href="single-post.html" class="d-flex align-items-center">
+                <a href="blog.html" class="d-flex align-items-center">
                   <img src="assets/img/post-sq-3.jpg" alt="" class="img-fluid me-3">
                   <div>
-                    <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
+                    <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Dec 5th '22</span></div>
                     <span>Life Insurance And Pregnancy: A Working Mom's Guide</span>
                   </div>
                 </a>
               </li>
 
               <li>
-                <a href="single-post.html" class="d-flex align-items-center">
+                <a href="blog.html" class="d-flex align-items-center">
                   <img src="assets/img/post-sq-4.jpg" alt="" class="img-fluid me-3">
                   <div>
-                    <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
+                    <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Dec 5th '22</span></div>
                     <span>How to Avoid Distraction and Stay Focused During Video Calls?</span>
                   </div>
                 </a>
