--- a/search-result.html
+++ b/search-result.html
@@ -117,9 +117,9 @@
                 <h3><a href="blog.html">What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</a></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                 <div class="d-flex align-items-center author">
-                  <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
+                  <div class="photo"><img src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid"></div>
                   <div class="name">
-                    <h3 class="m-0 p-0">Wade Warren</h3>
+                    <h3 class="m-0 p-0">Stephen Hodgkiss</h3>
                   </div>
                 </div>
               </div>
@@ -134,9 +134,9 @@
                 <h3><a href="blog.html">17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</a></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                 <div class="d-flex align-items-center author">
-                  <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
+                  <div class="photo"><img src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid"></div>
                   <div class="name">
-                    <h3 class="m-0 p-0">Wade Warren</h3>
+                    <h3 class="m-0 p-0">Stephen Hodgkiss</h3>
                   </div>
                 </div>
               </div>
@@ -151,9 +151,9 @@
                 <h3><a href="blog.html">The Best Homemade Masks for Face (keep the Pimples Away)</a></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                 <div class="d-flex align-items-center author">
-                  <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
+                  <div class="photo"><img src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid"></div>
                   <div class="name">
-                    <h3 class="m-0 p-0">Wade Warren</h3>
+                    <h3 class="m-0 p-0">Stephen Hodgkiss</h3>
                   </div>
                 </div>
               </div>
@@ -168,9 +168,9 @@
                 <h3><a href="blog.html">10 Life-Changing Hacks Every Working Mom Should Know</a></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                 <div class="d-flex align-items-center author">
-                  <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
+                  <div class="photo"><img src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid"></div>
                   <div class="name">
-                    <h3 class="m-0 p-0">Wade Warren</h3>
+                    <h3 class="m-0 p-0">Stephen Hodgkiss</h3>
                   </div>
                 </div>
               </div>
@@ -185,9 +185,9 @@
                 <h3><a href="blog.html">9 Half-up/half-down Hairstyles for Long and Medium Hair</a></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                 <div class="d-flex align-items-center author">
-                  <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
+                  <div class="photo"><img src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid"></div>
                   <div class="name">
-                    <h3 class="m-0 p-0">Wade Warren</h3>
+                    <h3 class="m-0 p-0">Stephen Hodgkiss</h3>
                   </div>
                 </div>
               </div>
