--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                   <a href="blog.html">
                     <span class="number">2</span>
                     <h3>17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</h3>
-                    <span class="author">Wade Warren</span>
+                    <span class="author">Stephen Hodgkiss</span>
                   </a>
                 </li>
                 <li>
@@ -292,9 +292,9 @@
             <h3><a href="blog.html">What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</a></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas, nobis error deserunt aliquam temporibus sapiente, laudantium dolorum itaque libero eos deleniti?</p>
             <div class="d-flex align-items-center author">
-              <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
+              <div class="photo"><img src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid"></div>
               <div class="name">
-                <h3 class="m-0 p-0">Wade Warren</h3>
+                <h3 class="m-0 p-0">Stephen Hodgkiss</h3>
               </div>
             </div>
           </div>
@@ -393,7 +393,7 @@
             <div class="d-flex align-items-center author">
               <div class="photo"><img src="assets/img/person-4.jpg" alt="" class="img-fluid"></div>
               <div class="name">
-                <h3 class="m-0 p-0">Wade Warren</h3>
+                <h3 class="m-0 p-0">Stephen Hodgkiss</h3>
               </div>
             </div>
           </div>
