--- a/single-post.html
+++ b/single-post.html
@@ -190,7 +190,7 @@
           <div class="comment d-flex">
             <div class="flex-shrink-0">
               <div class="avatar avatar-sm rounded-circle">
-                <img class="avatar-img" src="assets/img/person-2.jpg" alt="" class="img-fluid">
+                <img class="avatar-img" src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid">
               </div>
             </div>
             <div class="flex-shrink-1 ms-2 ms-sm-3">
