--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             <h3><a href="blog.html">What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</a></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas, nobis error deserunt aliquam temporibus sapiente, laudantium dolorum itaque libero eos deleniti?</p>
             <div class="d-flex align-items-center author">
-              <div class="photo"><img src="assets/img/person-4.jpg" alt="" class="img-fluid"></div>
+              <div class="photo"><img src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid"></div>
               <div class="name">
                 <h3 class="m-0 p-0">Stephen Hodgkiss</h3>
               </div>
