--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <ul>
            <!--<li><a href="">Blog</a></li>-->
           <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="category.html"><span>Categories</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <!-- <li class="dropdown"><a href="category.html"><span>Categories</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <!--<li><a href="search-result.html">Search Result</a></li>-->
+              <li><a href="search-result.html">Search Result</a></li>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
@@ -69,7 +69,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
 
           <li><a href="about.html">About</a></li>
            <!--<li><a href="contact.html">Contact</a></li>-->
